# graph_validator

./: .flake8  .pre-commit-config.yaml  pyproject.toml  readme.md
core/: helper.py  logging_config.yaml  validate.py
tests/: invalid_ontology.owl  sample_ontology.owl  test_ontology_load.py  test_serialization_to_turtle.py
